--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -1,1 +1,26 @@
-<p>selector-page works!</p>
+<h1 class="mt-5">Nested Selectors</h1>
+<hr>
+
+<form>
+    <div class="row">
+        <div class="col">
+            <label class="form-label">Continent: </label>
+            <select class="form-control"
+                    formControlName="continent">
+                <option value="">---Select a continent---</option>
+            </select>
+        </div>
+    </div>
+</form>
+
+<div class="row">
+    <div class="col">
+        <button class="btn btn-primary mt-3">
+            Select
+        </button>
+    </div>
+</div>
+
+<h3 class="mt-3">Form</h3>
+<pre>{{myForm.valid}}</pre>
+<pre>{{myForm.value|json }}</pre>
