Continent selector created

--- a/src/app/countries/pages/selector-page/selector-page.component.html
+++ b/src/app/countries/pages/selector-page/selector-page.component.html
@@ -8,7 +8,8 @@
             <select class="form-control"
                     formControlName="continent">
                 <option value="">---Select a continent---</option>
-                <option value="1">---America---</option>
+                <option *ngFor="let continent of continents" 
+                    [value]="continent | lowercase">---{{continent}}---</option>
             </select>
         </div>
     </div>
